Fixed jumping material details

--- a/sass/module/_search.scss
+++ b/sass/module/_search.scss
@@ -1005,6 +1005,11 @@ input#edit-search-block-form--2.spinner {
   .group-material-details {
     clear: both;
 
+    .field-group-format-wrapper {
+      margin-left: 34px;
+      padding-top: 10px;
+    }
+
     h2 {
       margin-bottom: 0;
     }
